# sphinx-javadoc-xml

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  verify_install.py
.github/workflows/: publish.yml
docs/: api_expression.rst  conf.py  index.rst  single_class.rst
docs/_static/: javadoc.xml
sphinx_javadoc_xml/: __init__.py  directives.py  links.py  parser.py
sphinx_javadoc_xml/static/: javadoc.css
